added db for file access, changed upload schema

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,12 @@ html
     title= title
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css')
     script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/styles/style.css')
   body
+    nav
+      .nav-wrapper
+        a.brand-logo.center(href='/') #{title}
+        ul#nav-mobile.right.hide-on-med-and-down
+          li
+            a(href='/users/login') Login
     block content
