--- a/views/index.pug
+++ b/views/index.pug
@@ -2,18 +2,16 @@ extends layout
 
 block content
   p Hello anon!
+  
+  form(action='/' enctype='multipart/form-data' method='POST') 
+    legend Upload anything you want here
+    br
+    label(for='thefile') Select a file:
+    input#thefile(type='file' name='thefile')
+    br
+    br
+    input(type="submit", value="Submit", class="btn btn-primary")
 
-  //- h3 Show a file-select field which allows only one file to be chosen:
-  //- form(method="POST" action='')
-  //-   label(for='myFile') Select a file:
-  //-   input#myfile(type='file' name='myfile')
-  //-   br
-  //-   br
-  //-   p.buttons
-  //-     input(type="submit", value="Submit", class="btn btn-primary")
-
-  form(action='/' enctype='multipart/form-data' method='POST')
-    input#avatar.admin__input(type='file' name='avatar')
-    input.admin__submit(type='submit')
-
-
+  //- form(action='/' enctype='multipart/form-data' method='POST')
+  //-   input#thefile.admin__input(type='file' name='thefile')
+  //-   input.admin__submit(type='submit')
