created show page for files and generating links, created login and reg page and auth

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
     legend Upload anything you want here
     br
     label(for='thefile') Select a file:
-    input#thefile(type='file' name='thefile')
+    input#drops(type='file' name='drops')
     br
     br
     input(type="submit", value="Submit", class="btn btn-primary")
