--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,5 +10,5 @@ html
         a.brand-logo.center(href='/') #{title}
         ul#nav-mobile.right.hide-on-med-and-down
           li
-            a(href='/users/login') Login
+            a(href='/login') Login
     block content
