--- a/views/show.pug
+++ b/views/show.pug
@@ -15,4 +15,4 @@ block content
       a(href='/users/login') login
       |  to edit your paste
   else
-    p #{paste.created_by}
+    p.center-align Hey #{paste.created_by}, do you want to delete this file?
