--- a/views/login.pug
+++ b/views/login.pug
@@ -11,9 +11,9 @@ html
         h3 Login
         p Please fill in this form to login.
         hr
-        label(for="email")
-          b Email
-        input#email(type="text", placeholder="Enter Email", name="email", required)
+        label(for="userName")
+          b Username
+        input#userName(type="text", placeholder="Enter username", name="userName", required)
         label(for="psw")
           b Password
         input#psw(type="password", placeholder="Enter Password", name="password", required)
