--- a/views/filelist.pug
+++ b/views/filelist.pug
@@ -5,5 +5,12 @@ block content
     p
       ul
         each file in files
+          br
           li= file.name
+          p= `${file.ori_name}`
+          p Do you want to delete this file?
+          form(action='/drops/delete/' + file.uniqueID, method='post')
+            input(type='hidden', name='_method', value='delete')
+            button.btn.waves-effect.waves-light.center-align(type='submit' name='action') Yes
+          .divider
     
